--- a/WebContent/WEB-INF/t/cms/www/default/channel/news201702.html
+++ b/WebContent/WEB-INF/t/cms/www/default/channel/news201702.html
@@ -9,6 +9,7 @@
 <script src="${resSys}/front.js" type="text/javascript"></script>
 <script type="text/javascript" src="/${res}/js/jquery.SuperSlide.js"></script>
 <link type="text/css" rel="stylesheet" href="/${res}/css/index.css" />
+<link type="text/css" rel="stylesheet" href="/${res}/css/home20170206.css" />
 
 <!--[if lt IE 9]> 
 <script src="/${res}/js/html5shiv.min.js"></script>
@@ -26,79 +27,10 @@ $(function() {
 [#include "../include/top.html"/]
 [#include "../include/header.html"/]
 <div class="main container clearfix">
-  <section class="w860">
-  	<!-- 头条 -->
-    <div class="topNews">
-   [@cms_content_list typeId='4' count='1' titLen='26' channelId='94,96,97,98,99,76' orderBy='4' channelOption='0' dateFormat='yyyy-MM-dd']
-    [#list tag_list as a]
-      <a href="${a.url}" target="_blank">[@text_cut s=a.title len=titLen append='...'/]</a>
-    [/#list]
-   [/@cms_content_list]
-    </div>
-    <!-- 焦点图 -->
-    <section class="news">
-      <div class="banner">
-        <span class="banner_pre" title="上一张"></span>
-	    <span class="banner_next" title="下一张"></span>
-        <div class="bd">    
-      [@cms_content_list typeId='2,3' recommend='1' orderBy='4' channelId='94,96,97,98,99,76' titLen='25' channelOption='0' dateFormat='yyyy-MM-dd']      
-          <ul>
-         [#list tag_list as a]
-            <li><a href="${a.url}" target="_blank"><img src="${a.typeImg!}"><h1>[@text_cut s=a.title len=titLen append='...'/]</h1></a></li>
-         [/#list]
-          </ul>
-         [/@cms_content_list]
-        </div>
-        <div class="hd"> 
-          [@cms_content_list typeId='2,3' recommend='1' orderBy='4' channelId='94,96,97,98,99,76' titLen='25' channelOption='0' dateFormat='yyyy-MM-dd']      
-          <ul>
-         [#list tag_list as a]
-            <li></li>
-         [/#list]
-          </ul>
-         [/@cms_content_list]
-        </div>
-        <script type="text/javascript">
-		$(document).ready(function(){
-		
-			$(".banner").hover(function(){
-				$(this).find(".banner_pre,.banner_next").stop(true, true).fadeTo("show", 1)
-			},function(){
-				$(this).find(".banner_pre,.banner_next").fadeOut()
-			});
-			
-			$(".banner").slide({
-				titCell: ".hd li ",
-				mainCell: ".bd ul",
-				delayTime: 500,
-				interTime: 3500,
-				prevCell:".banner_pre",
-				nextCell:".banner_next",
-				effect: "fold",
-				autoPlay: true,
-				trigger: "click",
-				startFun:function(i){
-					$(".bd a").eq(i).find("h3").css("display","block").fadeTo(1000,1);
-				}
-			});
-		
-		});
-        </script>
-      </div>
-      <div class="newsList">
-   [@cms_content_list  count='3' orderBy='4' channelId='94,96,97,98,99,76' channelOption='0' dateFormat='yyyy-MM-dd']
-     [#list tag_list as a]
-        <div class="item">
-          <h1><a href="${a.url}" target="_blank">[@text_cut s=a.title len=17 append='...'/]</a></h1>
-          <div class="des">[@text_cut s=a.description! len=72 append='...'/]</div>
-          <span>${a.ctgName}<em>${a.date?string(dateFormat)}</em></span>
-        </div>
-     [/#list]
-   [/@cms_content_list]
-      </div>
-    </section>
+  <section class="w630">
+    
     <section class="hot">
-      <div class="hot-nav"><h1><span>热点聚焦</span></h1></div>
+      <!-- <div class="hot-nav"><h1><span>热点聚焦</span></h1></div> -->
      [@cms_content_page count='10' orderBy='4' channelId='94,96,97,98,99,76' channelOption='0' dateFormat='yyyy-MM-dd HH-mm']
       [#list tag_pagination.list as a]
        [#if a_index>2]
@@ -106,7 +38,7 @@ $(function() {
           [#if a.typeImg??]<a href="${a.url}" target="_blank" class="img"><img src="${a.typeImg!}"></a>[/#if]
           <div class="text">
             <h1><a href="${a.url}" target="_blank">${a.title}</a></h1>
-            <div class="des">[#if a.typeImg??][@text_cut s=a.description len=116 append='...'/][#else][@text_cut s=a.description len=176 append='...'/][/#if]</div>
+            <div class="des">[#if a.typeImg??][@text_cut s=a.description len=46 append='...'/][#else][@text_cut s=a.description len=26 append='...'/][/#if]</div>
             <div class="fl"><span class="ch">${a.ctgName}<em>${a.date?string(dateFormat)}</em></span></div>
             <div class="data"><span class="view">${a.contentCount.views!}</span><span class="comment">${a.contentCount.comments!}</span></div>
           </div>
@@ -132,17 +64,17 @@ $(function() {
     </section>
     <section class="tag issue clearfix">
       <div class="tag-nav"><h1><span>热门话题</span></h1></div>
-   [@cms_content_list typeId='2' count='5' orderBy='9' channelId='75' channelOption='0']
+   [@cms_content_list typeId='2' count='8' orderBy='9' channelId='94,96,97,98,99' channelOption='0']
      [#list tag_list as a]
       <div class="item clearfix" [#if a_index<1]style="border-top:none;"[/#if]>
         <a href="${a.url}" target="_blank" class="img"><img src="${a.typeImg!}"></a>
         <h2><a href="${a.url}" target="_blank">[@text_cut s=a.title len='22' append='...' /]</a></h2>
-        <div class="issue-comment">评论  (${a.contentCount.comments!})</div>
+        <!-- <div class="issue-comment">评论  (${a.contentCount.comments!})</div> -->
       </div>
      [/#list]
    [/@cms_content_list]
     </section>
-    <section class="tag topic clearfix">
+    <!-- <section class="tag topic clearfix">
       <div class="tag-nav"><h1><a>专题专栏</a></h1></div>
       <div class="topicList">
         [@cms_topic_list count='3' recommend='1' orderBy='4' descLen='36' append='...']
@@ -151,7 +83,7 @@ $(function() {
           [/#list]
           [/@cms_topic_list] 
       </div>
-    </section>
+    </section> -->
     <section class="tag wcom clearfix">
       <div class="tag-nav"><h1><span>精彩评论</span></h1></div>
      [@cms_comment_list siteId=site.id checked='true' recommend='true' count='5' ]
