--- a/WebContent/WEB-INF/t/cms/www/default/content/news.html
+++ b/WebContent/WEB-INF/t/cms/www/default/content/news.html
@@ -2,7 +2,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>${title} - ${site.name} - Powered by JEECMS</title>
+<title>${title} - ${site.name} - ${site.shortName}</title>
 <meta content="${content.tagStr!}" http-equiv="keywords" />
 <meta content="${content.description!}" http-equiv="description" />
 <script src="${resSys}/jquery.js" type="text/javascript"></script>
@@ -16,7 +16,7 @@
 <![endif]-->
 
 <script type="text/javascript">
-$(function() {alert(1);
+$(function() {
 Cms.checkPerm("${base}","${content.id}");
 Cms.collectCsi("${base}","collectCsiDiv","collect_csi","${content.id}");
 Cms.attachment("${base}","${content.id}","${content.attachments?size}","attach");
@@ -61,28 +61,28 @@ $(function(){
 [#include "../include/header.html"/]
 <div class="main container clearfix">
   <section class="content_w850">
-    <h1>${content.title}<a class="position">${channel.name}</a></h1>
-    <div class="content-inf">发布时间：${content.releaseDate}&nbsp;&nbsp;作者：${content.author!'本站编辑'}&nbsp;&nbsp;来源：${content.origin!'本站原创'}&nbsp;&nbsp;浏览次数：<span id="views"></span>
-    <div class="content-action"><a class="content-comment">我有话说</a> | <span class="content-share">分享
+    <h1>${content.title}<!-- <a class="position">${channel.name}</a> --></h1>
+    <div class="content-inf">发布时间：${content.releaseDate}&nbsp;&nbsp;作者：${content.author!'本站编辑'}&nbsp;&nbsp;来源：${content.origin!'本站原创'}&nbsp;&nbsp;<!-- 浏览次数：<span id="views"></span> -->
+     <div class="content-action"><!--<a class="content-comment">我有话说</a>--> | <span class="content-share">分享
     <ul class="content-share-list"><li><a class="content_qq">QQ好友</a></li><li><a class="content_qqzone">QQ空间</a></li><li><a class="content_weixin">微信好友</a></li><li><a class="content_sina">新浪微博</a></li></ul>
-    </span> | <a class="content-collect">收藏</a></div>
+    </span> |<!-- <a class="content-collect">收藏</a>--></div> 
     </div>
     <div class="content-txt">
       ${txt!}
     </div>
-    <div><a href="${base}/content/reward.jspx?contentId=${content.id}">打赏</a></div>
+    <!-- <div><a href="${base}/content/reward.jspx?contentId=${content.id}">打赏</a></div> -->
     <div class="content-link clearfix">
-      <span class="prev-content"><i></i>上一篇：[@cms_content id=content.id next='1' channelId=channel.id][#if tag_bean??]<a href="${tag_bean.url}">[@text_cut s=tag_bean.title len=21 append='...'/]</a>[#else]没有了[/#if][/@cms_content]</span>
-      <span class="next-content">下一篇：[@cms_content id=content.id next='0' channelId=channel.id][#if tag_bean??]<a href="${tag_bean.url}">[@text_cut s=tag_bean.title len=21 append='...'/]</a>[#else]没有了[/#if][/@cms_content]<i></i></span>
+      <span class="prev-content"><i></i>[@cms_content id=content.id next='1' channelId=channel.id][#if tag_bean??]<a href="${tag_bean.url}">[@text_cut s=tag_bean.title len=21 append='...'/]</a>[#else]没有了[/#if][/@cms_content]</span>
+      <span class="next-content">[@cms_content id=content.id next='0' channelId=channel.id][#if tag_bean??]<a href="${tag_bean.url}">[@text_cut s=tag_bean.title len=21 append='...'/]</a>[#else]没有了[/#if][/@cms_content]<i></i></span>
     </div>
 
-     <div><a  href="${base}/content/buy.jspx?contentId=${content.id}">打赏</a></div>
+     <!-- <div><a  href="${base}/content/buy.jspx?contentId=${content.id}">打赏</a></div> -->
     <section class="comments">
       <h1>评论<span>已有<a class="count">2037</a>条</span></h1>
       <textarea placeholder="发表你此时的观点和想法 ……" class="comments-text" id="comments-text"></textarea>
       <div class="down clearfix"><img src="/${res}/images/userImg.png" class="userImg"><span><a>登录</a>之后才能发表评论</span><input type="submit" value="提交评论" class="submit-on"></div>
     </section>
-    <section class="comments-list">
+    <!-- <section class="comments-list">
       <h1><span>热门评论</span></h1>
       <div class="comments-item">
         <div class="tx"><img src="/${res}/images/user01.png"></div>
@@ -121,7 +121,7 @@ $(function(){
         </div>
       </div>
       <div class="open-more"><a>加载更多评论</a></div>
-    </section>
+    </section> -->
     <script>
       $(document).ready(function(){
 		  $(".comments-hf").click(function(){
