--- a/WebContent/WEB-INF/t/cms/www/default/topic/topic_default.html
+++ b/WebContent/WEB-INF/t/cms/www/default/topic/topic_default.html
@@ -26,7 +26,7 @@
   <div class="top clearfix">
     <div class="top-news fl">
       <h1>专题头条</h1>
-      [@cms_content_list count='1' orderBy='4' channelId='75' titLen='23' channelOption='1' topicId=topic.id ]
+      [@cms_content_list count='1' orderBy='4' channelId='75,94' titLen='23' channelOption='1' topicId=topic.id ]
       [#list tag_list as a]
       <div class="item" style="border:0px none;">
         <div><a href="${a.url}" target="_blank" class="title bold">[@text_cut s=a.title len=titLen /]</a></div>
@@ -34,7 +34,7 @@
       </div>
       [/#list]
       [/@cms_content_list]
-       [@cms_content_list count='2' orderBy='4' channelId='75' titLen='23' channelOption='1' topicId=topic.id ]
+       [@cms_content_list count='2' orderBy='4' channelId='75,94' titLen='23' channelOption='1' topicId=topic.id ]
       [#list tag_list as a]
       [#if a_index>0]
       <div class="item">
@@ -74,7 +74,7 @@
   </div>
   <div class="top-list">
     <div class="item">
-       [@cms_content_list count='5' orderBy='4' channelId='75' titLen='23' channelOption='1' topicId=topic.id ]
+       [@cms_content_list count='5' orderBy='4' channelId='75,96' titLen='23' channelOption='1' topicId=topic.id ]
       [#list tag_list as a]
       [#if a_index>1]
       [#if a_index==2][#else] | [/#if]<a href="${a.url}" target="_blank">${a.title}</a>
@@ -83,7 +83,7 @@
       [/@cms_content_list]
     </div>
     <div class="item">
-       [@cms_content_list count='8' orderBy='4' channelId='75' titLen='23' channelOption='1' topicId=topic.id ]
+       [@cms_content_list count='8' orderBy='4' channelId='75,96' titLen='23' channelOption='1' topicId=topic.id ]
       [#list tag_list as a]
       [#if a_index>4]
       [#if a_index==5][#else] | [/#if]<a href="${a.url}" target="_blank">${a.title}</a>
@@ -92,7 +92,7 @@
       [/@cms_content_list]
     </div>
     <div class="item">
-       [@cms_content_list count='11' orderBy='4' channelId='75' titLen='23' channelOption='1' topicId=topic.id ]
+       [@cms_content_list count='11' orderBy='4' channelId='75,96' titLen='23' channelOption='1' topicId=topic.id ]
       [#list tag_list as a]
       [#if a_index>7]
       [#if a_index==8][#else] | [/#if]<a href="${a.url}" target="_blank">${a.title}</a>
@@ -104,7 +104,7 @@
   <div class="topic-image">
     <h1>专题图文</h1>
     <div class="top-image-list">
- [@cms_content_list typeId='2' recommend='2' channelId='76' count='6' titLen='20' channelOption='1' topicId=topic.id orderBy='4']    
+ [@cms_content_list typeId='2' recommend='' channelId='76,96' count='6' titLen='20' channelOption='1' topicId=topic.id orderBy='4']    
       <ul>
         [#list tag_list as a]
         <li [#if a_index==0||a_index==3]style="margin-left:0px;"[/#if]><a href="${a.url}" target="_blank"><img src="${a.typeImg!}"></a></li>
