--- a/WebContent/WEB-INF/t/cms/www/default/channel/pic201702.html
+++ b/WebContent/WEB-INF/t/cms/www/default/channel/pic201702.html
@@ -26,7 +26,8 @@ $(function() {
 <body>
 [#include "../include/top.html"/]
 [#include "../include/header.html"/]
-<div class="DB_tab25">
+
+<!-- <div class="DB_tab25">
         <ul class="DB_bgSet">
             <li style="background:url(/${res}/images/pic01.jpg) center center no-repeat;"></li>
             <li style="background:url(/${res}/images/pic02.jpg) center center no-repeat;"></li>
@@ -68,7 +69,7 @@ $(function() {
             }
         })
     </script>
-</div>   
+</div> -->  
 <div class="main container clearfix">  
   <section class="tssj">
     <div class="tssjNav"></div>
