--- a/WebContent/WEB-INF/jeecms_sys/top.html
+++ b/WebContent/WEB-INF/jeecms_sys/top.html
@@ -131,6 +131,7 @@ function mapDialog(){
                 <@cms_perm url="/frame/config_main.do">
 				<li class="normal" id="tb_20" onclick="HoverLi(20);"><a href="frame/config_main.do" target="mainFrame"><@s.m "cms.function.config"/></a></li>
 				</@cms_perm>
+				<li class="normal" id="tb_20" ><a href="${base}/jeeadmin/jeecms/static/o_index.do" target="mainFrame">生成首页</a></li>
             </ul>
         </div>
     </div>
