--- a/WebContent/WEB-INF/t/cms/www/default/index/index20170206.html
+++ b/WebContent/WEB-INF/t/cms/www/default/index/index20170206.html
@@ -234,7 +234,7 @@ $(function() {
   
   
   	<!-- 旅游_begin -->
-  	<!--     <div class="w680">
+  	<div class="w680">
         <div class="rim05 mt10">
             <div class="tuku_select1">
                 <h1>旅游</h1>
@@ -271,7 +271,7 @@ $(function() {
                 </ul>
             </div>
         </div>
-      </div>-->
+      </div>
     <!-- 旅游_end -->
     
   </section>
@@ -330,7 +330,7 @@ $(function() {
                 [#list tag_list as a]
                 <div class="data_row news_article clearfix news_first">
                     <a href="${a.url}" class="na_pic" target="_blank">
-                        <img src="${a.typeImg!a.titleImg!a.contentImg}" alt="${a.title}"  width="190" height="120" >
+                        <img src="${a.typeImg!}" alt="${a.title}"  width="190" height="120" >
                     </a>
                     <div class="na_detail clearfix ">
                         <div class="news_title">
