--- a/WebContent/WEB-INF/t/cms/www/default/index/index20170206.html
+++ b/WebContent/WEB-INF/t/cms/www/default/index/index20170206.html
@@ -483,7 +483,7 @@ $(function() {
 		      				 [#list tag_list as a]
 		      				 [#if a_index=0]
 		                     	<div class="top">
-		                        <a href="${a.url} target="_blank"" class="ttop">
+		                        <a href="${a.url}" target="_blank" class="ttop">
 		                            <img src="${a.typeImg!}" alt="" width="600" height="293">
 		                            <h3>${a.title}</h3>
 		                        </a>
@@ -654,7 +654,7 @@ $(function() {
 		      				 [#list tag_list as a]
 		      				 [#if a_index=0]
 		                     	<div class="top">
-		                        <a href="${a.url} target="_blank"" class="ttop">
+		                        <a href="${a.url}" target="_blank" class="ttop">
 		                            <img src="${a.typeImg!}" alt="" width="600" height="293">
 		                            <h3>${a.title}</h3>
 		                        </a>
