--- a/WebContent/WEB-INF/t/cms/www/default/index/index20170206.html
+++ b/WebContent/WEB-INF/t/cms/www/default/index/index20170206.html
@@ -584,7 +584,7 @@ $(function() {
             <div class="col_c">
                 <div class="cm_news_main">
                     <ul class="cm_ul_round ul_page1">
-                    	[@cms_content_list typeId='1,2' count='12' titLen='22' channelId='8' orderBy='4' channelOption='0' dateFormat='yyyy-MM-dd']
+                    	[@cms_content_list typeId='1,2' count='12' titLen='22' channelId='' orderBy='8' channelOption='0' dateFormat='yyyy-MM-dd']
     					[#list tag_list as a]
     						[#if a_index=0||a_index=6]
     							<li class="cm_fb">
