--- a/WebContent/WEB-INF/t/cms/www/default/index/index20170206.html
+++ b/WebContent/WEB-INF/t/cms/www/default/index/index20170206.html
@@ -177,7 +177,7 @@ $(function() {
                 </a>
             </li>
             <li class="nav_item">
-                <a class="nav_name" ne-role="tab-nav" href="${base}/zy/index.jhtml">科技
+                <a class="nav_name" ne-role="tab-nav" href="${base}/kj/index.jhtml">科技
                     <span class="nav_item_ink"></span>
                 </a>
             </li>
